<resources>
    <string name="app_name">upiview</string>
    <string name="show">SHOW</string>

    <string name="c">C</string>
    <string name="cross">X</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="upi_pin_will_keep_your_account_secure_from_unauthorized_n_acess_do_not_share_this_pin_with_anyone">UPI PIN will keep your account secure from unauthorized \n access.Do not share this PIN with anyone.</string>
    <string name="upi_keyboard_is_disabled">UPI KEYBOARD IS DISABLED.</string>
</resources>